--- a/components/splitcontent/SplitContent.module.scss
+++ b/components/splitcontent/SplitContent.module.scss
@@ -8,7 +8,7 @@
 	justify-items: center;
 
 	@include mobile {
-		gap: 6rem;
+		gap: 1.5rem;
 	}
 
 	@include tablet-h {
