--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -45,6 +45,7 @@ h6 {
 	font-weight: $bold;
 	color: $black;
 	font-family: $fonts_headers;
+	line-height: 1.25em;
 }
 
 h1 {
